overflow fix

--- a/css/cozumler.css
+++ b/css/cozumler.css
@@ -8,10 +8,6 @@ body{
     --mainBorderColor: rgba(217, 217, 217, 0.446);
 }
 
-*{
-    outline: 1px solid limegreen;
-}
-
 header{
     background-image: none;
     height: 10vh;
@@ -135,7 +131,6 @@ footer{
         background-size: cover;
         background-attachment: fixed;
         background-repeat: no-repeat;
-        border: 1px solid blue;
     }
 
     header{
